syntax = "proto3";

option java_package = "kr.pik.message";

message LoginMessage {
  message EmailMessage {
    string email = 1;
    string password = 2;
  }

  message FacebookLoginMessage {
    string token = 1;
  }

  oneof loginMethod {
    EmailMessage emailLogin = 1;
    FacebookLoginMessage facebookLogin = 2;
  } 
}

message RegisterVerifyMessage {
  string email = 1;
}

message RegisterVerifyCheckMessage {
  string verifyNumber = 1;
}

message RegisterMessage {
  message EmailMessage {
    string email = 1;
    string password = 2;
    string name = 3;
  }

  message FacebookLoginMessage {
    string token = 1;
  }

  oneof registerMethod {
    EmailMessage emailLogin = 1;
    FacebookLoginMessage facebookLogin = 2;
  } 
}